# cardano-graphical-tx

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  start-database.sh  svelte.config.js  turbo.json  tx.json  vite.config.ts
.changeset/: README.md  config.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
.impeccable/: design.json
app/: env.mjs  examples.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
app/_components/: AddressInput.tsx  Button.tsx  Constructors.tsx  Error.tsx  Examples.tsx  Header.tsx  Input.tsx  Loading.tsx  NetSelector.tsx  Playground.tsx  TxInput.tsx  index.ts
app/_contexts/: configs.context.tsx  graphical.context.tsx  index.ts  ui.context.tsx
app/_handlers/: cbor.handler.ts  (+2 more)
docs/: exceptional-cases.md  requirement.md  schema.json  specification.md  tx.json  tx_example.json
issues/: cf-token-metadata-sdk.md  mobile-responsiveness.md  release-please-docker.md
legacy-graphical-tx/: Dockerfile  tailwind.config.ts
napi-pallas/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
napi-pallas/src/: address.rs  cbor.rs  constants.rs  lib.rs  tx.rs  utils.rs
napi-pallas/tests/: all_params.rs  empty_params.rs  inputs_outputs.rs  test_cbor.rs
napi-pallas/tests/common/: all_params.rs  empty_params.rs  input_output.rs  mod.rs
public/: tx_example.json
src/: app.css  app.html
styles/: globals.css
(+641 files in other folders)
