[package]
edition = "2021"
name = "napi-pallas"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.79"
hex = "0.4.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pallas = "0.29.0"
pallas-codec = "0.29.0"
pallas-addresses = "0.29.0"
serde_json = "1.0.64"
pallas-crypto = "0.29.0"
pallas-primitives = "0.29.0"
jsonschema = "0.26.1"
minicbor = "0.25.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
